<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mdo3.overhaul.HomeScreen"
    android:background="@drawable/login_pic">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:labelFor="@id/login_email" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:labelFor="@id/login_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sign_up"
                style="@android:style/Widget.Button"
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:onClick="signUp"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/button_log_in"
                style="@android:style/Widget.Button"
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:onClick="loginBtn"
                android:text="@string/log_in" />

        </LinearLayout>

        <Switch
            android:id="@+id/login_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:switchTextAppearance="@android:style/TextAppearance.Widget.Button"
            android:text="@string/user_customer"
            android:textOff="@string/user_customer"
            android:textOn="@string/user_driver"
            android:textSize="36sp"
            tools:checked="false" />

    </LinearLayout>
</LinearLayout>
